--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,10 @@ html, body{
 
 .c2{
     background-color: #ff6f69;
-    flex: 1;
+    width: 400px;
 }
 
 .c3{
     background-color: #88d8b0;
     flex: 1;
-
 }
